fix last minute

--- a/css/styles.css
+++ b/css/styles.css
@@ -51,6 +51,7 @@ body {background: #282828 ;font-family:Century, Times, sans-serif; color: #FFF; 
 .titre-bleu-gros {color:#182451;font-size:20px;text-transform:uppercase; display:block; padding:10px 0px 10px 0px;}
 .titre-blanc {color:#FFF;font-size:16px;text-transform:uppercase; display:block; padding:10px 0px 10px 0px; text-align: center;}
 .titre-blanc-gros {color:#FFF;font-size:20px;text-transform:uppercase; display:block; padding:0px 0px 10px 0px; text-align: center;}
+.titre-noir-gros {color:#000;font-size:20px; font-weight:bold; text-transform:uppercase; display:block; padding:0px 0px 10px 0px; text-align: center;}
 
 
 #table {display: table; width: 650px; text-align:center; border: 1px solid white; padding:10px 10px 10px 10px;  margin-left: 165px;}
