--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@ body {background: #282828 ;font-family:Century, Times, sans-serif; color: #FFF; 
 	#logo {padding-top:17px;}
 	#titre-site {font-size: 24px; text-shadow: -2px 0 black, 0 1px black, 1px 0 black, 0 -1px black;}
 
-
+p {padding-left: 10px;}
 .content{background:url(../images/page-bottom.jpg) center bottom no-repeat scroll; max-width: 1500px; border-bottom:1px solid #5b5b5b;} /*ATTENTION laisser cet border pour que l'image de fond soit collée en bas */
 	.content-top {background:url(../images/menu-fond.png) center bottom repeat scroll; padding:0px 0px 0px 0px; height:53px; }
 		.content-top-base { margin-left:auto;margin-right:auto; width: 990px; margin-bottom: 0px; padding:0px 0px 0px 0px;}
